# health-sync

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  samconfig.toml  template-garmin.yaml  template-mfp.yaml  template.yaml  todo.md
.claude/: progress.txt  settings.json  settings.local.json
.claude/agents/: evaluator.md  progress-logger.md
.claude/hooks/: allow_dev_commands.py  detect-file-modified.py  evaluate-on-stop.sh  evaluate.sh  log-progress.sh
.devcontainer/: devcontainer.json
scripts/: create_secret.sh  create_secret_mfp.sh  deploy.sh  deploy_mfp.sh
src/: requirements.txt
src/asken_garmin_sync/: Makefile  asken_client.py  config.py  garmin_client.py  handler.py  logging_config.py  requirements.txt  sync.py
src/asken_myfitnesspal_sync/: CLAUDE.md  Makefile  asken_client.py  config.py  handler.py  logging_config.py  models.py  myfitnesspal_client.py  requirements.txt  sync.py  todo.md
src/utils/: asken_base_client.py  logging_config.py
tests/: test_asken_client.py  test_config.py  test_garmin_client.py  test_sync.py
tests/asken_myfitnesspal_sync/: conftest.py  test_asken_client.py  test_config.py  test_handler.py  test_models.py  test_myfitnesspal_client.py  test_sync.py
tests/asken_myfitnesspal_sync/fixtures/: asken_advice_breakfast.html  asken_advice_daily.html  asken_advice_dinner.html  asken_advice_empty.html  asken_advice_lunch.html  asken_meal_page.html  asken_meal_page_no_breakfast.html  asken_meal_page_zero_calories.html  mfp_diary_page.html
tests/fixtures/: exercise_with_entries.html
