[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "asken-garmin-sync"
version = "0.1.0"
description = "あすけん と Garmin Connect 間のデータ同期ツール"
requires-python = ">=3.12"
dependencies = [
    "garminconnect",
    "requests",
    "beautifulsoup4",
    "boto3",
    "lxml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "responses",
    "moto[secretsmanager]",
    "ruff",
    "mypy",
    "boto3-stubs[secretsmanager]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
