[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asken-sync"
version = "0.1.0"
description = "あすけん を起点とした各サービスへのデータ同期ツール群"
requires-python = ">=3.12"
dependencies = [
    "garminconnect",
    "requests",
    "beautifulsoup4",
    "boto3",
    "lxml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "responses",
    "moto[secretsmanager]",
    "ruff",
    "mypy",
    "boto3-stubs[secretsmanager]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
